--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "angular-d3-word-cloud": "^0.5.3",
     "bootswatch": "^4.3.1",
+    "d3-scale": "^3.0.0",
+    "d3-scale-chromatic": "^1.3.3",
     "firebase": "^6.2.4",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
